--- a/front-end/src/components/LandingPage/HowItWorks/styles.scss
+++ b/front-end/src/components/LandingPage/HowItWorks/styles.scss
@@ -4,7 +4,7 @@ $text-color-dark: rgba(0, 0, 0, 0.7);
 .howItWorks {
   width: 100%;
   background-color: #f5f4ed;
-  padding: 30px 0;
+  padding: 30px 40px;
 
   &__grid {
     padding-top: 6rem !important;
@@ -20,14 +20,5 @@ $text-color-dark: rgba(0, 0, 0, 0.7);
     margin-top: 15px;
     letter-spacing: 1px;
     font-size: 16px;
-    padding: 0;
-  }
-
-  .odd-text {
-    padding-right: 10rem;
-  }
-
-  .even-text {
-    padding-left: 10rem;
   }
 }
